--- a/talk.qmd
+++ b/talk.qmd
@@ -36,6 +36,13 @@ The present work is the result of a team work involving
 ```{python}
 #| echo: true
 import numpy as np
-r = np.arange(0, 2)
-print(r)
+import plotly.graph_objects as go
+
+x = np.linspace(0, 4*np.pi, 500)
+
+fig = go.Figure()
+fig.add_trace(go.Scatter(x=x, y=np.sin(x), name='sin(x)'))
+fig.add_trace(go.Scatter(x=x, y=np.cos(x), name='cos(x)'))
+fig.update_layout(width=1000, height=500)
+fig.show()
 ```
