--- a/talk.qmd
+++ b/talk.qmd
@@ -895,11 +895,41 @@ Now, if we wanted to reconstruct all the cells of the finest level, we'd only ne
 ## Euler 2D results (MR+MLF solution order 3 (OSMP scheme)) 
 
 
-:::{.text-center}
+<!-- :::{.text-center}
 ![](figures/Bsvortex_osmp3_InitialState_MRAMLF_eps1e-03.png){width=47%}
 ![](figures/Bsvortex_osmp3_Tf10_MRAMLF_eps1e-03.png){width=47%}
+::: -->
+
+::: {layout-nrow=2}
+![](figures/Bsvortex_osmp3_InitialState_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_Density_T00_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_Tf10_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_Density_T10_MRAMLF_eps1e-03.png){width=47%}
+
+<!-- ![](figures/Bsvortex_osmp3_Density_T00_MRAMLF_eps1e-03){width=47%}
+![](figures/Bsvortex_osmp3_VelocityMagnitude_T00_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_Density_T10_MRAMLF_eps1e-03.png){width=47%}
+![](figuresBsvortex_osmp3_VelocityMagnitude_T10_MRAMLF_eps1e-03.png){width=47%} -->
 :::
 
+---
+
+## Euler 2D results (MR+MLF solution order 3 (OSMP scheme)) 
+
+
+<!-- :::{.text-center}
+![](figures/Bsvortex_osmp3_InitialState_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_Tf10_MRAMLF_eps1e-03.png){width=47%}
+::: -->
+
+::: {layout-nrow=2}
+![](figures/Bsvortex_osmp3_InitialState_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_VelocityMagnitude_T00_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_Tf10_MRAMLF_eps1e-03.png){width=47%}
+![](figures/Bsvortex_osmp3_VelocityMagnitude_T10_MRAMLF_eps1e-03.png){width=47%}
+
+
+:::
 
 
 
